--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ click==8.1.7
 colorama==0.4.6
 coverage==7.5.2
 decorator==5.1.1
-python-decouple==3.8
+decouple==0.0.7
 distlib==0.3.8
 dj-config-url==0.1.1
 Django==5.0.6
@@ -39,6 +39,7 @@ pyflakes==3.2.0
 Pygments==2.18.0
 pyproject-api==1.6.1
 python-dateutil==2.9.0.post0
+python-decouple==3.4
 sentry-sdk==2.3.1
 six==1.16.0
 sqlparse==0.5.0
