--- a/requirements.txt
+++ b/requirements.txt
@@ -3,27 +3,49 @@ asttokens==2.4.1
 black==24.4.2
 cachetools==5.3.3
 certifi==2024.2.2
+cffi==1.16.0
 chardet==5.2.0
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==7.5.2
+crypto==1.4.1
+cryptography==42.0.7
 decorator==5.1.1
 distlib==0.3.8
 dj-config-url==0.1.1
 Django==5.0.6
+django-admin-rangefilter==0.13.0
+django-cors-headers==4.3.1
 django-debug-toolbar==4.4.2
+django-oauth-toolkit==2.4.0
+django-oauth2-provider==0.2.6.1
+django-rest-swagger==2.2.0
+djangorestframework==3.15.1
+drf-yasg==1.21.7
 executing==2.0.1
 factory-boy==3.3.0
 Faker==25.2.0
 filelock==3.14.0
 flake8==7.0.0
 gunicorn==22.0.0
+idna==3.7
+inflection==0.5.1
 ipython==8.24.0
 isort==5.13.2
+itypes==1.2.0
 jedi==0.19.1
+Jinja2==3.1.4
+jwcrypto==1.5.6
+MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mypy-extensions==1.0.0
+Naked==0.1.32
+oauthlib==3.2.2
+openapi-codec==1.3.2
 packaging==24.0
 parso==0.8.4
 pathspec==0.12.1
@@ -31,20 +53,32 @@ pexpect==4.9.0
 platformdirs==4.2.2
 pluggy==1.5.0
 prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.11.1
+pycparser==2.22
+pycryptodome==3.20.0
 pyflakes==3.2.0
 Pygments==2.18.0
 pyproject-api==1.6.1
 python-dateutil==2.9.0.post0
 python-decouple==3.4
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.32.2
 sentry-sdk==2.3.1
+setuptools==70.0.0
+shellescape==3.8.1
+shortuuid==1.0.13
+simplejson==3.19.2
 six==1.16.0
 sqlparse==0.5.0
 stack-data==0.6.3
 tox==4.15.0
 traitlets==5.14.3
+typing_extensions==4.12.0
+uritemplate==4.1.1
 urllib3==2.2.1
 virtualenv==20.26.2
 wcwidth==0.2.13
